# net-viewer

./: .gitignore  README.md  docker-compose.yaml
app/: .env  Dockerfile  __main__.py  api_router.py  main.py  oid_query.py  pyproject.toml  settings.py
app/auth/: auth.py  models.py  router_auth.py
app/client/: router_web_client.py
app/core/: core.py  models.py  router_core.py  utils.py
app/database/: __init__.py  mongo_motor.py
app/database/tests/: test_db.py
app/snmp/: models.py  oid_query.py  router_snmp.py
app/templates/: client.html  logon.html  menu.html  t_base.html
init_db/: mongo.dump  restore_db.sh
static/css/: addon.css
static/js/: core.js  logon.js  menu.js
